<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backdrop_poster"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="@android:dimen/thumbnail_width"
                android:layout_height="320dp"
                android:layout_margin="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_image"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_toEndOf="@id/image"
                android:layout_toRightOf="@id/image"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:text="Title" />

            <TextView
                android:id="@+id/ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/image"
                android:layout_toRightOf="@id/image"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                tools:text="Ratings: 9.5" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ratings"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/image"
                android:layout_toRightOf="@id/image"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                tools:text="Release Date: 2015-08-2" />

            <RatingBar
                android:id="@+id/favourite_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/release_date"
                android:layout_toEndOf="@id/image"
                android:layout_toRightOf="@id/image"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:clickable="true"
                android:focusable="true"
                android:numStars="5"
                android:rating="0.5"
                android:stepSize="0.5"/>

            <Button
                android:id="@+id/favourite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favourite"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_below="@id/favourite_rating"
                android:layout_toEndOf="@id/image"
                android:layout_toRightOf="@id/image"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview1"
            android:textSize="25sp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"/>


        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            tools:text="@string/overview" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/trailer_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailers"
            android:textSize="25sp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"/>

        <com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView
            android:id="@+id/expandable_list"
            android:background="@android:color/black"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/more_trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_more_trailers"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/share_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textSize="20sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:visibility="invisible"/>
        </RelativeLayout>


        <TextView
            android:id="@+id/review_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:textSize="25sp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"/>


        <com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView
            android:id="@+id/expandable_list_of_reviews"
            android:background="@android:color/black"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/more_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_more_reviews"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible"/>


    </LinearLayout>

</ScrollView>

